# parley-rust-backend

./: Cargo.toml
.sqlx/: query-1d6f6b7c7c58c891ec76dd1c1e6480d9859c4cfbbe059a7412ad47a610ba1989.json  query-49253512b41cf405f9ad2714104f11283c53b15e2585d75c99e95d602eb186b8.json  query-5464404458a2229df36c70735bab4a03a7044b5ab749adcb2de7788beb94a7ce.json  query-6401a93d6735b631622f60ba1a514a977c527729f9a0ba639d493fd56d37f6ae.json  query-977df129d51f05e8403133d5d2d9e68fb53bba603ab706f92af1b39af147e44f.json  query-ae38788048272fd94ce25927b84e467379c4c92a5d413a2c068db39bbc37dacd.json  query-b132b6ff9e431a87da0bfefebab7646ccb2ee932bed4addaa1a3d3a71a928597.json  query-b5fcd902cb354f481865ef95d2f1d4aa162867e2ff8b79fff63efb079d1b931b.json  query-beb5f7f6bbf6480990aad35c76c33d82d53ddd08ba9088c697dae4d6f619ab5f.json  query-cb68e72065facb9aa078cb97798b8806f453d77d6f1ee6ae08a77fca77eb040c.json  query-d5d0413f669350ac079e9630239b71c866ae395fe974f3aa3f152fa308f77f5f.json  query-d931f21675c273813382277b5b28812e17e2b541e99c1d92cbe37072006b7e81.json  query-dcf73c1c439627317aa77a2aaf28cf7b9aa419c9ac4ec479ecaeb6b33d06c275.json  query-e80caccdad7fa45a9a1fd2428fefbf2917dea3b4a82cc23d2fc13bb11c2020b6.json
migrations/: 20250602140835_chat_friend_system.up.sql  20250602141537_change_account_status_default.up.sql  20250610201353_modify_chat_type_name.up.sql
src/: app_state.rs  db.rs  error.rs  main.rs  models.rs  queries.rs  routes.rs
src/handlers/: hello.rs  v1.rs
src/handlers/v1/: chats.rs  email_auth.rs  friends.rs  get_all_users.rs  hello_v1.rs  oauth.rs  profile.rs
src/middlewares/: auth.rs
src/models/: chats.rs  friends.rs  sessions.rs  users.rs  websocket.rs
src/queries/: chats.rs  friends.rs  users.rs
src/routes/: index.rs  v1.rs
src/routes/v1/: chats.rs  friends.rs  users.rs  websocket.rs
src/utils/: email.rs
src/websocket/: handlers.rs  manager.rs
