[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
dotenvy = "0.15.7"
anyhow = "1.0.98"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
