[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
dotenvy = "0.15.7"
anyhow = "1.0.98"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
bcrypt = "0.17.0"
validator = { version = "0.20.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
